Add hero full page implementation, implement own color set, misc. changes

--- a/site/layouts/partials/sidebar.html
+++ b/site/layouts/partials/sidebar.html
@@ -1,2 +1,4 @@
-<h4 class="is-size-4">Twitter Feed</h4>
-<p>No tweets yet, check back soon!</p>
+<div class="box">
+    <h4 class="is-size-4">Twitter Feed</h4>
+    <p>No tweets yet, check back soon!</p>
+</div>
