--- a/src/scss/yuzu.scss
+++ b/src/scss/yuzu.scss
@@ -1,2 +1,6 @@
+$dark-primary-color: #1976d2;
+$light-primary-color: #bbdefb;
+$primary-color: #2196f3;
+$accent-color: #ff4081;
+
 $primary: #696969;
-$navbar-item-hover-color: purple;
