Cleanup scss, fix coloring of navbar in different scenarios

--- a/site/layouts/partials/header_homepage.html
+++ b/site/layouts/partials/header_homepage.html
@@ -1,6 +1,6 @@
-<section id="homepage-hero" class="hero is-medium is-info is-bold is-fullheight">
+<section id="homepage-hero" class="hero is-medium is-info is-bold">
     <div class="hero-head">
-        <nav class="navbar is-fixed-top">
+        <nav class="navbar is-fixed-top" id="hero-navbar">
             {{ partial "nav_contents" . }}
         </nav>
     </div>
