--- a/src/scss/yuzu.scss
+++ b/src/scss/yuzu.scss
@@ -1,6 +1,5 @@
-$dark-primary-color: #1976d2;
-$light-primary-color: #bbdefb;
-$primary-color: #2196f3;
-$accent-color: #ff4081;
+$dark-primary-color: #102027;
+$light-primary-color: #62727b;
+$primary-color: #37474f;
 
-$primary: #696969;
+//$primary: #696969;
