--- a/site/layouts/partials/header_homepage.html
+++ b/site/layouts/partials/header_homepage.html
@@ -1,23 +1,34 @@
-<section id="homepage-hero" class="hero container is-primary">
-    <div class="hero-body">
-        <div class="columns">
-            <!-- Left panel -->
-            <div class="column is-5">
-                <h1 class="title">{{ .Site.Title }}</h1>
-                <h2 class="subtitle">{{ .Site.Params.Tagline }}</h2>
-                <a class="button is-medium is-inverted" href="{{ .Site.Params.GithubURL }}">
-                    <span class="icon">
-                        <i class="fab fa-github"></i>
-                    </span>
-                    <span>Source Code</span>
-                </a>
-            </div>
+<section id="homepage-hero" class="hero is-medium is-info is-bold">
+    <div class="hero-head">
+        <nav class="navbar is-fixed-top" id="hero-navbar">
+            {{ partial "nav_contents" . }}
+        </nav>
+    </div>
 
-            <!-- Right panel -->
-            <div class="column is-7">
-                <figure class="image is-16by9">
-                    <img src="{{ .Site.BaseURL}}/images/jumbotron.png" />
-                </figure>
+    <div class="hero-body">
+        <div class="container">
+            <div class="columns">
+                <!-- Left panel -->
+                <div class="column is-5">
+                    <div class="middle">
+                        <div>
+                            <h2 class="title">{{ .Site.Params.Tagline }}</h2>
+                            <a class="button is-medium is-light" href="{{ .Site.Params.GithubURL }}">
+                                <span class="icon">
+                                    <i class="fab fa-github"></i>
+                                </span>
+                                <span>Source Code</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Right panel -->
+                <div class="column is-7">
+                    <figure class="image is-16by9">
+                        <img src="{{ .Site.BaseURL}}/images/jumbotron.png" />
+                    </figure>
+                </div>
             </div>
         </div>
     </div>
