--- a/src/scss/yuzu.scss
+++ b/src/scss/yuzu.scss
@@ -1,2 +1,5 @@
-$primary: #696969;
-$navbar-item-hover-color: purple;
+$dark-primary-color: #102027;
+$light-primary-color: #62727b;
+$primary-color: #37474f;
+
+//$primary: #696969;
