Updated scss and header for homepage.

--- a/site/layouts/partials/header_homepage.html
+++ b/site/layouts/partials/header_homepage.html
@@ -9,17 +9,15 @@
         <div class="container">
             <div class="columns">
                 <!-- Left panel -->
-                <div class="column is-5">
-                    <div class="middle">
-                        <div>
-                            <h2 class="title">{{ .Site.Params.Tagline }}</h2>
-                            <a class="button is-medium is-light" href="{{ .Site.Params.GithubURL }}">
-                                <span class="icon">
-                                    <i class="fab fa-github"></i>
-                                </span>
-                                <span>Source Code</span>
-                            </a>
-                        </div>
+                <div class="column is-centered-vertically is-5">
+                    <h2 class="title">{{ .Site.Params.Tagline }}</h2>
+                    <div>
+                        <a class="button is-medium is-light" href="{{ .Site.Params.GithubURL }}">
+                            <span class="icon">
+                                <i class="fab fa-github"></i>
+                            </span>
+                            <span>Source Code</span>
+                        </a>
                     </div>
                 </div>
 
