Added menu to config. Updated hero to open buttons in new tab.

--- a/site/layouts/partials/header_homepage.html
+++ b/site/layouts/partials/header_homepage.html
@@ -12,7 +12,7 @@
                 <div class="column is-centered-vertically is-5">
                     <h2 class="title">{{ .Site.Params.Tagline }}</h2>
                     <div>
-                        <a class="button is-medium is-light" href="{{ .Site.Params.GithubURL }}">
+                        <a class="button is-medium is-light" href="{{ .Site.Params.GithubURL }}" target="_blank">
                             <span class="icon">
                                 <i class="fab fa-github"></i>
                             </span>
