Changed navbar from is-light to is-dark, updated SCSS to use dark theme.

--- a/site/layouts/partials/header_homepage.html
+++ b/site/layouts/partials/header_homepage.html
@@ -1,6 +1,6 @@
 <section id="homepage-hero" class="hero is-medium is-info is-bold">
     <div class="hero-head">
-        <nav class="navbar is-fixed-top" id="hero-navbar">
+        <nav id="hero-navbar" class="navbar is-dark is-size-6 is-fixed-top" role="navigation" aria-label="main navigation">
             {{ partial "nav_contents" . }}
         </nav>
     </div>
