Tweaked certain sections of scss to improve load ordering.

--- a/site/layouts/partials/header_homepage.html
+++ b/site/layouts/partials/header_homepage.html
@@ -1,4 +1,4 @@
-<section id="homepage-hero" class="hero is-medium is-info is-bold">
+<section id="homepage-hero" class="hero is-medium is-primary is-bold">
     <div class="hero-head">
         <nav id="hero-navbar" class="navbar is-dark is-size-6 is-fixed-top" role="navigation" aria-label="main navigation">
             {{ partial "nav_contents" . }}
