--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,15 +1,23 @@
-@import "./yuzu.scss";
+/* 1. Import the initial variables */
+@import "./node_modules/bulma/sass/utilities/functions.sass";
+@import "./node_modules/bulma/sass/utilities/initial-variables.sass";
 
-// Override/configure the default color palette
-$info: $primary-color;
+/* 2. Set the derived variables */
+@import "./yuzu_before_derived.scss";
+@import "./node_modules/bulma/sass/utilities/derived-variables.sass";
+@import "./yuzu_after_derived.scss";
 
+/* 3. Misc customization of Bulma */
+$body-background-color: $background;
+$footer-background-color: $background;
+
+// Changes the navbar height to match discourse.
 $navbar-height: 64px;
-$body-background-color: darken(white, 10%);
 
 // Allows for larger icons with less padding
 $navbar-item-img-max-height: 2.75rem;
 
-$footer-background-color: $body-background-color;
-
+/* 4. Import the rest of Bulma */
 @import "./node_modules/bulma/bulma.sass";
 @import "./shared.scss";
+@import "./yuzu.scss";
