Removed sort from twitter feed temporary. error calling sort: sequence must be provided

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,7 +2,7 @@
 <div class="container">
     <section class="section">
         <div class="columns is-multiline">
-            {{ range sort .Site.Data.twitter "order" }}
+            {{ range .Site.Data.twitter }}
             <div class="column is-one-third">
                 {{ partial "widget/tweet.html" . }}
             </div>
