--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,8 +1,9 @@
 {{ define "main" }}
+{{ partial "home_hero" . }}
 <div class="container">
     <section class="section">
         <div class="columns is-multiline">
-            {{ range .Site.Data.twitter }}
+            {{ range sort .Site.Data.twitter "order" }}
             <div class="column is-one-third">
                 {{ partial "widget/tweet.html" . }}
             </div>
