--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,13 +2,7 @@
 {{ partial "home_hero" . }}
 <div class="container">
     <section class="section">
-        <div class="columns is-multiline">
-            {{ range sort .Site.Data.twitter "order" }}
-            <div class="column is-one-third">
-                {{ partial "widget/tweet.html" . }}
-            </div>
-            {{ end }}
-        </div>
+        {{ partial "index_tweets" . }}
     </section>
 </div>
 {{ end }}
