--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -3,7 +3,7 @@
 <div class="container">
     <section class="section">
         <div class="columns is-multiline">
-                {{ range .Site.Data.twitter }}
+                {{ range sort .Site.Data.twitter "order" }}
                 <div class="column is-one-third">
                     {{ partial "widget/tweet.html" . }}
                 </div>
