Updated hero contents. Updated theme.

--- a/site/layouts/partials/home_hero_contents.html
+++ b/site/layouts/partials/home_hero_contents.html
@@ -1,7 +1,7 @@
 <h2 class="title">{{ .Site.Params.Tagline }}</h2>
 <div class="content">
     <p>Yes. Experimental.</p>
-    <p>No. It can't run games... yet.</p>
+    <p>No. It can't run games yet.</p>
 </div>
 <div>
     <a class="button is-medium is-light" href="{{ .Site.Params.GithubURL }}" target="_blank">
