--- a/site/layouts/partials/home_hero_contents.html
+++ b/site/layouts/partials/home_hero_contents.html
@@ -1,7 +1,8 @@
 <h2 class="title">{{ .Site.Params.Tagline }}</h2>
 <div class="content">
-    <p>Yes. Experimental.</p>
-    <p>No. It can't run games yet.</p>
+    <p>Yuzu is an experimental open-source emulator for the Nintendo Switch from the creators of Citra.</p>
+    <p>It is written in C++ with portability in mind, with builds actively maintained for Windows, Linux and macOS.
+    The emulator is currently only useful for homebrew development and research purposes.</p>
 </div>
 <div>
     <a class="button is-medium is-light" href="{{ .Site.Params.GithubURL }}" target="_blank">
