--- a/site/layouts/partials/layout/navbar.html
+++ b/site/layouts/partials/layout/navbar.html
@@ -1,3 +1,5 @@
 <nav class="navbar is-dark is-size-6 is-fixed-top" role="navigation" aria-label="main navigation">
-    {{ partial "layout/navbar_contents" . }}
+    <div class="container">
+        {{ partial "layout/navbar_contents" . }}
+    </div>
 </nav>
