--- a/src/scss/yuzu/yuzu_after_derived.scss
+++ b/src/scss/yuzu/yuzu_after_derived.scss
@@ -13,5 +13,5 @@ $text-strong: $white;
 $title-color: $white;
 $subtitle-color: $white;
 
-$link: lighten(#fff, 50);
+$link: $primary;
 $link-hover: darken($link, 15);
