Added svg's for theme. Removed unused assets. Updated scss for navbar icon size. Updated shared-bulma-theme.

--- a/src/scss/shared.scss
+++ b/src/scss/shared.scss
@@ -9,6 +9,7 @@
 .navbar {
     transition: background-color 0.2s ease;
 }
+.navbar-logo { height: 32px; }
 
 .hero .navbar.is-freestanding {
     background: $navbar-background-color;
