Updated navbar menu. Updated section titles.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,12 +1,13 @@
 {{ define "main" }}
 {{ partial "home_hero" . }}
 
-<a name="faq"></a>
+<a name="about"></a>
 <section class="hero">
     <div class="hero-body">
         <div class="container">
-            <h1 class="title">Frequently asked questions</h1>
+            <h1 class="title">About Yuzu</h1>
             <div class="content">
+                <p>Another blurb about Yuzu.</p>
                 <ol>
                     <li>
                         <span class="is-italic">Why are you the way you are?</span>
@@ -22,7 +23,7 @@
 <section class="hero">
     <div class="hero-body">
         <div class="container">
-            <h1 class="title">How can I contribute?</h1>
+            <h1 class="title">Contributing and Donations</h1>
             <div class="content">
                 <p>A call to action!</p>
             </div>
