Updated index layout.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -5,7 +5,7 @@
 <section class="hero">
     <div class="hero-body">
         <div class="container">
-            <h1 class="title">About Yuzu</h1>
+            <h1 class="title">About</h1>
             <div class="content">
                 <p>Another blurb about Yuzu.</p>
                 <ol>
@@ -19,13 +19,25 @@
     </div>
 </section>
 
-<a name="contribute"></a>
+<a name="getting-started"></a>
 <section class="hero">
     <div class="hero-body">
         <div class="container">
-            <h1 class="title">Contributing and Donations</h1>
+            <h1 class="title">Getting Started</h1>
             <div class="content">
                 <p>A call to action!</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<a name="donate"></a>
+<section class="hero">
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title">Donating</h1>
+            <div class="content">
+                <p>A call to action... 2!</p>
             </div>
         </div>
     </div>
