Updated menu. Added donate and wiki pages. Updated scss to add shared_customization. Updated style.scss to reflect this. Updated yuzu base themes. Tweaked the About section.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,14 +8,7 @@
 @import "./yuzu/yuzu_after_derived.scss";
 
 /* 3. Misc customization of Bulma */
-$body-background-color: $background;
-$footer-background-color: $background;
-
-// Changes the navbar height to match discourse.
-$navbar-height: 64px;
-
-// Allows for larger icons with less padding
-$navbar-item-img-max-height: 2.75rem;
+@import "./shared_customization.scss";
 
 /* 4. Import the rest of Bulma */
 @import "./node_modules/bulma/bulma.sass";
