--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,6 +1,43 @@
-{{ define "main" }}
+{{ define "main" }} {{ partial "home_hero" . }}
 
-{{ partial "home_hero" . }}
+<section class="hero is-info">
+    <div class="hero-body">
+        <div class="container">
+            <nav class="columns">
+
+                <a class="column has-text-centered" href="https://www.google.com">
+                    <span class="icon is-large">
+                        <i class="fas fa-3x fa-cubes"></i>
+                    </span>
+                    <p class="title is-4">
+                        <strong>Yuzu Development</strong>
+                    </p>
+                    <p class="subtitle">Custom Builds!</p>
+                </a>
+
+                <a class="column has-text-centered" href="https://www.google.com">
+                    <span class="icon is-large">
+                        <i class="fas fa-3x fa-cubes"></i>
+                    </span>
+                    <p class="title is-4">
+                        <strong>Switch Hacking</strong>
+                    </p>
+                    <p class="subtitle">Cool!</p>
+                </a>
+
+                <a class="column has-text-centered" href="https://www.google.com">
+                    <span class="icon is-large">
+                        <i class="fas fa-3x fa-cubes"></i>
+                    </span>
+                    <p class="title is-4">
+                        <strong>Switch Homebrew</strong>
+                    </p>
+                    <p class="subtitle">You can do that?</p>
+                </a>
+            </nav>
+        </div>
+    </div>
+</section>
 
 <a name="about"></a>
 <section class="hero">
@@ -12,19 +49,13 @@
                     yuzu is a work-in-progress Nintendo Switch emulator. yuzu is an open-source project, licensed under the GPLv2 (or any later
                     version). yuzu has been designed with portability in mind, with builds available for Windows, Linux,
                     and macOS.
-                </p>
 
-                <p>
                     The project was started in spring of 2017 by bunnei, one of the original authors of the popular Citra 3DS emulator, to experiment
                     with and research the Nintendo Switch. Due to the similarities between Switch and 3DS, yuzu was developed
                     as a fork of Citra.
-                </p>
 
-                <p>
                     This means that it uses the same project architecture, and both emulators benefit from shared improvements.
-                </p>
 
-                <p>
                     During the early months of development, work was done in private, and progress was slow. However, as Switch reverse-engineering
                     and homebrew development became popular, work on yuzu began to take off as well.
                 </p>
@@ -81,45 +112,6 @@
                 </div>
 
             </div>
-        </div>
-    </div>
-</section>
-
-<section class="hero is-info">
-    <div class="hero-body">
-        <div class="container">
-            <nav class="columns">
-
-                <a class="column has-text-centered" href="https://www.google.com">
-                    <span class="icon is-large">
-                        <i class="fas fa-3x fa-cubes"></i>
-                    </span>
-                    <p class="title is-4">
-                        <strong>Yuzu Development</strong>
-                    </p>
-                    <p class="subtitle">Custom Builds!</p>
-                </a>
-
-                <a class="column has-text-centered" href="https://www.google.com">
-                    <span class="icon is-large">
-                        <i class="fas fa-3x fa-cubes"></i>
-                    </span>
-                    <p class="title is-4">
-                        <strong>Switch Hacking</strong>
-                    </p>
-                    <p class="subtitle">Cool!</p>
-                </a>
-
-                <a class="column has-text-centered" href="https://www.google.com">
-                    <span class="icon is-large">
-                        <i class="fas fa-3x fa-cubes"></i>
-                    </span>
-                    <p class="title is-4">
-                        <strong>Switch Homebrew</strong>
-                    </p>
-                    <p class="subtitle">You can do that?</p>
-                </a>
-            </nav>
         </div>
     </div>
 </section>
