Translated column cards to tile cards.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -48,16 +48,12 @@
                 <p>
                     yuzu is a work-in-progress Nintendo Switch emulator. yuzu is an open-source project, licensed under the GPLv2 (or any later
                     version). yuzu has been designed with portability in mind, with builds available for Windows, Linux,
-                    and macOS.
-
-                    The project was started in spring of 2017 by bunnei, one of the original authors of the popular Citra 3DS emulator, to experiment
-                    with and research the Nintendo Switch. Due to the similarities between Switch and 3DS, yuzu was developed
-                    as a fork of Citra.
-
-                    This means that it uses the same project architecture, and both emulators benefit from shared improvements.
-
-                    During the early months of development, work was done in private, and progress was slow. However, as Switch reverse-engineering
-                    and homebrew development became popular, work on yuzu began to take off as well.
+                    and macOS. The project was started in spring of 2017 by bunnei, one of the original authors of the popular
+                    Citra 3DS emulator, to experiment with and research the Nintendo Switch. Due to the similarities between
+                    Switch and 3DS, yuzu was developed as a fork of Citra. This means that it uses the same project architecture,
+                    and both emulators benefit from shared improvements. During the early months of development, work was
+                    done in private, and progress was slow. However, as Switch reverse-engineering and homebrew development
+                    became popular, work on yuzu began to take off as well.
                 </p>
 
                 <p>
@@ -66,8 +62,8 @@
                     and homebrew development.
                 </p>
 
-                <div class="columns">
-                    <div class="column">
+                <div class="tile is-ancestor">
+                    <div class="tile is-parent">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">Can I use yuzu to play Switch games?</p>
@@ -81,7 +77,7 @@
                         </div>
                     </div>
 
-                    <div class="column">
+                    <div class="tile is-parent">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">When will yuzu run games?</p>
@@ -96,7 +92,7 @@
                         </div>
                     </div>
 
-                    <div class="column">
+                    <div class="tile is-parent">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">Where does the name come from?</p>
