Changed grey color, info. Updated hero.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }} {{ partial "home_hero" . }}
 
-<section class="hero">
+<section class="hero is-info">
     <div class="hero-body">
         <div class="container">
             <nav class="columns">
