Changed scss colors to adapt  to be the same as box-background and card-background.

--- a/src/scss/yuzu/yuzu_after_derived.scss
+++ b/src/scss/yuzu/yuzu_after_derived.scss
@@ -3,8 +3,8 @@ $background: darken($dark, 8);
 
 $navbar-background-color: $dark;
 
-$box-background-color: darken($dark, 5);
-$card-background-color: darken($dark, 5);
+$box-background-color: $info;
+$card-background-color: $info;
 
 $text: $white;
 $text-light: $white;
