Updated wiki hero icons.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,4 +1,6 @@
-{{ define "main" }} {{ partial "home_hero" . }}
+{{ define "main" }}
+
+{{ partial "home_hero" . }}
 
 <section class="hero is-info">
     <div class="hero-body">
@@ -7,7 +9,7 @@
 
                 <a class="column has-text-centered" href="https://www.google.com">
                     <span class="icon is-large">
-                        <i class="fas fa-3x fa-cubes"></i>
+                        <i class="fas fa-3x fa-code"></i>
                     </span>
                     <p class="title is-4">
                         <strong>Yuzu Development</strong>
@@ -17,7 +19,7 @@
 
                 <a class="column has-text-centered" href="https://www.google.com">
                     <span class="icon is-large">
-                        <i class="fas fa-3x fa-cubes"></i>
+                        <i class="fas fa-3x fa-terminal"></i>
                     </span>
                     <p class="title is-4">
                         <strong>Switch Hacking</strong>
@@ -27,7 +29,7 @@
 
                 <a class="column has-text-centered" href="https://www.google.com">
                     <span class="icon is-large">
-                        <i class="fas fa-3x fa-cubes"></i>
+                        <i class="fas fa-3x fa-gamepad"></i>
                     </span>
                     <p class="title is-4">
                         <strong>Switch Homebrew</strong>
@@ -115,5 +117,4 @@
         </div>
     </div>
 </section>
-
 {{ end }}
