--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,5 +1,8 @@
-{{ define "main" }} {{ partial "home_hero" . }}
+{{ define "main" }}
 
+{{ partial "home_hero" . }}
+
+<!-- Wiki Hero -->
 <section class="hero is-info">
     <div class="hero-body">
         <div class="container">
@@ -39,6 +42,7 @@
     </div>
 </section>
 
+<!-- About Yuzu Section -->
 <section class="hero">
     <div class="hero-body">
         <div class="container">
@@ -104,6 +108,7 @@
     </div>
 </section>
 
+<!-- Advertisement -->
 <section class="hero is-info">
     <div class="hero-body">
         <div class="container has-text-centered">
@@ -112,6 +117,7 @@
     </div>
 </section>
 
+<!-- Twitter Feed -->
 <section class="section">
     <div class="container">
         <div class="tile is-ancestor">
