--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,6 +1,4 @@
-{{ define "main" }}
-
-{{ partial "home_hero" . }}
+{{ define "main" }} {{ partial "home_hero" . }}
 
 <!-- Wiki Hero -->
 <section class="hero is-info">
@@ -112,7 +110,8 @@
 <section class="hero is-info">
     <div class="hero-body">
         <div class="container has-text-centered">
-            <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="{{ .Site.Params.GoogleAdsenseClient }}" data-ad-slot="{{ .Site.Params.GoogleAdsenseSlot }}"></ins>
+            <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="{{ .Site.Params.GoogleAdsenseClient }}"
+                data-ad-slot="{{ .Site.Params.GoogleAdsenseSlot }}"></ins>
         </div>
     </div>
 </section>
