--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -13,7 +13,7 @@
                     <p class="title is-4">
                         <strong>Yuzu Development</strong>
                     </p>
-                    <p class="subtitle">Custom Builds!</p>
+                    <p class="subtitle">---</p>
                 </a>
 
                 <a class="column has-text-centered" href="https://www.google.com">
@@ -23,7 +23,7 @@
                     <p class="title is-4">
                         <strong>Switch Hacking</strong>
                     </p>
-                    <p class="subtitle">Cool!</p>
+                    <p class="subtitle">---</p>
                 </a>
 
                 <a class="column has-text-centered" href="https://www.google.com">
@@ -33,7 +33,7 @@
                     <p class="title is-4">
                         <strong>Switch Homebrew</strong>
                     </p>
-                    <p class="subtitle">You can do that?</p>
+                    <p class="subtitle">---</p>
                 </a>
             </nav>
         </div>
